--- a/src/nav/nav.html
+++ b/src/nav/nav.html
@@ -20,10 +20,20 @@
             <a>Messages</a>
         </nav>
         <div class="flex align-middle ml-auto gap-3">
-            <form class="flex items-center gap-3">
-                <input type="text" class="input" placeholder="Email">
-                <input type="password" class="input" placeholder="Password">
-                <button class="btn">Login</button>
+            <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
+                <input 
+                [(ngModel)]="creds.Email"
+                name="email"
+                type="text" 
+                class="input" 
+                placeholder="Email">
+                <input 
+                [(ngModel)]="creds.Password"
+                name="password"
+                type="password" 
+                class="input" 
+                placeholder="Password">
+                <button type="submit" class="btn">Login</button>
             </form>
 
         </div>
