--- a/src/nav/nav.html
+++ b/src/nav/nav.html
@@ -1,5 +1,5 @@
-<header class="p-4 w-full fixed top-0 z-50 bg-black">
-    <div class="flex align-middle items-center  px-10 mx-auto gap-6">
+<header class="p-3 w-full fixed top-0 z-50 bg-black">
+    <div class="flex align-middle items-center  px-8 mx-auto gap-6">
         <a class="flex items-center max-h-16 gap-3 text-white border-r-white border-r-2 pr-6">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                 <path
@@ -20,22 +20,33 @@
             <a>Messages</a>
         </nav>
         <div class="flex align-middle ml-auto gap-3">
-            <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
-                <input 
-                [(ngModel)]="creds.Email"
-                name="email"
-                type="text" 
-                class="input" 
-                placeholder="Email">
-                <input 
-                [(ngModel)]="creds.Password"
-                name="password"
-                type="password" 
-                class="input" 
-                placeholder="Password">
+            @if (account.currentUser(); as user) 
+            {
+                <div class="dropdown dropdown-end">
+                <div tabindex="0" role="button" class="flex items-center text-white text-xl
+                gap-3 cursor-pointer">
+                    <img src="/user.png" alt="user avatar" class="w-8 h-8 rounded-full">
+                    <span>
+                        {{user.displayName}}
+                    </span>
+                </div>
+                <ul tabindex="-1" class="dropdown-content menu bg-base-100 rounded-box z-1 w-52 p-2 shadow-sm">
+                    <li><a>Edit profile</a></li>
+                    <li><a (click)="logout()">Logout</a></li>
+                </ul>
+            </div>
+
+            }
+            @else {
+                    <form #loginForm="ngForm" (ngSubmit)="login()" class="flex items-center gap-3">
+                <input [(ngModel)]="creds.Email" name="email" type="text" class="input" placeholder="Email">
+                <input [(ngModel)]="creds.Password" name="password" type="password" class="input"
+                    placeholder="Password">
                 <button type="submit" class="btn">Login</button>
             </form>
-
+            }
+            
+            
         </div>
     </div>
 </header>
