added register component

--- a/src/features/home/home.html
+++ b/src/features/home/home.html
@@ -19,8 +19,8 @@
         </div>
     </div>
     }@else {
-     <div class="text-xl text-center flex justify-center">
-        Register form goes here
+     <div class="w-full text-xl text-center flex justify-center">
+        <app-register class="w-full"/>
     </div>   
     }
    
