--- a/src/features/account/register/register.html
+++ b/src/features/account/register/register.html
@@ -12,7 +12,7 @@
         <input type="text" class="input w-full" name="displayName" [(ngModel)]="creds.displayName" placeholder="Display Name">
         
         <div class="flex items-center justify-end gap-3">
-            <button class="btn">Cancel</button>
+            <button (click)="cancel()" type="button" class="btn">Cancel</button>
             <button class="btn btn-primary" type="submit">register</button>
         </div>
     </form>
