--- a/src/features/home/home.html
+++ b/src/features/home/home.html
@@ -13,14 +13,15 @@
                     All you need to do is sign up
                 </p>
                 <div class="flex items-center gap-3">
-                    <button (click)="showRegister()" class="btn btn-primary btn-lg">Register</button>
+                    <button (click)="showRegister(true)" class="btn btn-primary btn-lg">Register</button>
                     <button class="btn btn-info btn-lg">Learn more</button>
                 </div>
         </div>
     </div>
     }@else {
      <div class="w-full text-xl text-center flex justify-center">
-        <app-register class="w-full"/>
+        <app-register  class="w-full"
+        (cancelRegister)="showRegister($event)"/>
     </div>   
     }
    
